--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="grid"></div>
+    <button id="clearBtn">Clear</button>
+    <div id="grid" class="grid"></div>
   </body>
 </html>
