--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>etch-a-sketch</title>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div id="grid" class="grid"></div>
-    <button id="clearBtn">Clear</button>
+    <div class="container">
+      <h1>etch-a-sketch</h1>
+      <div id="grid" class="grid"></div>
+      <div class="options">
+        <input type="color" id="colorPicker" />
+        <button id="colorBtn" class="btn">color</button>
+        <button id="eraserBtn" class="btn">eraser</button>
+        <button id="clearBtn" class="btn">clear</button>
+      </div>
+    </div>
   </body>
 </html>
